apps/web-info/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prod-prefix
spec:
  stripPrefix:
    prefixes:
      - /prod
