apps/web-info/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-info
  template:
    metadata:
      labels:
        app: web-info
    spec:
      containers:
      - name: web-info
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: web-info-html
