apps/web-info/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-info-service
spec:
  selector:
    app: web-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
